V.1.0.3 Fixed/improved GuiSearchField Removed debug menu when focusing a text field and pressing K Added "fill line" functionality to GridLayout Disabled Sqript support for this release

--- a/src/main/resources/assets/acsguis/css/default_style.css
+++ b/src/main/resources/assets/acsguis/css/default_style.css
@@ -155,7 +155,8 @@ combo_box>button
 .search_bar1 .search_bar_match, combo_box .combo_button
 {
     width: 80%;
-    height: 10px;
+    height: auto;
+    top: auto;
     padding: 0 0 0 1px;
     text-align-vertical: center;
     text-shadow: none;
