--- a/src/main/resources/assets/acsguis/css/default_style.css
+++ b/src/main/resources/assets/acsguis/css/default_style.css
@@ -56,7 +56,7 @@ combo_box>button
 {
     width: 100%;
     height: 15px;
-    background-color: rgba(112; 112; 255);
+    background-color: rgb(112, 112, 255);
     color: rgba(198, 198, 198, 255);
 }
 
@@ -163,7 +163,7 @@ combo_box>button
     color: white;
     z-index: 500;
     background: darkgray none;
-    border: 1px solid gray;
+    border: 1px gray;
     left: 50%;
     right: 50%;
 }
@@ -177,7 +177,7 @@ combo_box>button
     top: 10px;
     left: 10px;
     background-color: rgba(0, 0, 0, 120);
-    border: solid 3px rgba(0, 0, 0, 120);
+    border: 3px rgba(0, 0, 0, 120);
     width: 50%;
     height: 60%;
     z-index: 500;
