Fix default_style.css and disable gui debug by default

--- a/src/main/resources/assets/acsguis/css/default_style.css
+++ b/src/main/resources/assets/acsguis/css/default_style.css
@@ -21,7 +21,7 @@ progress_bar
     progress-bar-full-color: green;
     progress-bar-text-color: white;
     text-align: center;
-    vertical-text-align: center;
+    text-align-vertical: center;
 }
 
 text_area,text_field
