Upgrade to ForgeGradle3

--- a/src/main/resources/assets/acsguis/css/dnx_debug.css
+++ b/src/main/resources/assets/acsguis/css/dnx_debug.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "dnx:test_font";
     /*font-style: italic;*/
-    src: url("acsguis:css/font2.ttf");
+    src: url("acsguis:css/font.ttf");
     font-size: 52px;
 }
 
