--- a/src/main/resources/assets/acsguis/css/dnx_debug.css
+++ b/src/main/resources/assets/acsguis/css/dnx_debug.css
@@ -6,9 +6,10 @@
 }
 
 .home {
-    background-color: rgba(0, 0, 0, 100);
-    width: 80%;
-    height: 80%;
+    background-color: darkmagenta;
+    /*rgba(0, 0, 0, 100);*/
+    width: 100%;
+    height: 100%;
     top: 50%;
     bottom: 50%;
     left: 50%;
